@@ -6,8 +6,8 @@
         {% endif %}
         <h2>Relevant files</h2>
         <ul>
-          <li><a href="{{ mode }}.{{ host }}.pson">{{ pretty_mode }} catalog</a></li>
-          <li><a href="change.{{ host  }}.pson">Change catalog</a></li>
+          <li><a href="{{ mode }}.{{ host }}.pson.gz">{{ pretty_mode }} catalog</a></li>
+          <li><a href="change.{{ host  }}.pson.gz">Change catalog</a></li>
           <li><a href="{{ mode }}.{{ host }}.err">{{ pretty_mode }} errors/warnings</a></li>
           <li><a href="change.{{ host }}.err">Change errors/warnings</a></li>
 {% if page_name == 'fulldiff.html' %}
