@@ -2,6 +2,7 @@
 ### 2.5.*
 * add gerrit change id to output dir
 * add ability to filter for core resources
+* Store pson catalogs as gziped files
 
 ## 2022-11-7
 ### 2.4.2
